@@ -1,3 +1,9 @@
+*pygments-rb-0.4.2 (25 Feb 2013)
+
+  25 Feb 2013; Manuel Rüger <gentoo@rueg.eu> +pygments-rb-0.4.2.ebuild,
+  -pygments-rb-0.3.7.ebuild:
+  dev-ruby/pygments-rb: Version bump
+
 *pygments-rb-0.3.7 (02 Jan 2013)
 
   02 Jan 2013; Manuel Rüger <gentoo@rueg.eu> +pygments-rb-0.3.7.ebuild,
